force-app/main/default/objects/Permanency_Plan__c/fields/Adoption_Planning_Stage__c.field-meta.xml
<CustomField>
    <fullName>Adoption_Planning_Stage__c</fullName>
    <label>Adoption Planning Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>Adoption Efforts</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Emotional Tiles</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Narrative</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Applicable Child Assessment</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Disclosure Checklist</label>
            </value>
            <value>
                <fullName>DISCLOSURE CHECKLIST</fullName>
                <isActive>false</isActive>
                <label>DISCLOSURE CHECKLIST</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>