force-app/main/default/objects/Permanency_Plan__c/fields/Child_in_care_15_out_of_last_22_months__c.field-meta.xml
<CustomField>
    <fullName>Child_in_care_15_out_of_last_22_months__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Child in care 15 out of the last 22 months / Court has waived/reunification efforts</description>
    <label>Child in care 15 out of last 22 months</label>
    <type>Checkbox</type>
</CustomField>