force-app/main/default/objects/Permanency_Plan__c/fields/Child_is_living_with_LDSS_holds_custody__c.field-meta.xml
<CustomField>
    <fullName>Child_is_living_with_LDSS_holds_custody__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Child is living with resource parent(s),relative(s) or friends and the LDSS holds custody</description>
    <label>Child is living with LDSS holds custody</label>
    <type>Checkbox</type>
</CustomField>