force-app/main/default/objects/Permanency_Plan__c/fields/Medical_Assistance_only__c.field-meta.xml
<CustomField>
    <fullName>Medical_Assistance_only__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Medical Assistance only?</description>
    <label>Medical Assistance only</label>
    <type>Checkbox</type>
</CustomField>