force-app/main/default/objects/Permanency_Plan__c/fields/Offered_Adoption_subsidy__c.field-meta.xml
<CustomField>
    <fullName>Offered_Adoption_subsidy__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Offered Adoption subsidy</description>
    <label>Offered Adoption subsidy</label>
    <type>Checkbox</type>
</CustomField>