force-app/main/default/objects/Permanency_Plan__c/fields/Single_Parent_Adoption_Check__c.field-meta.xml
<CustomField>
    <fullName>Single_Parent_Adoption_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Single Parent Adoption Check</description>
    <label>Single Parent Adoption Check</label>
    <type>Checkbox</type>
</CustomField>