force-app/main/default/objects/Permanency_Plan__c/fields/Subsidy_Agreement_Under_Appeal__c.field-meta.xml
<CustomField>
    <fullName>Subsidy_Agreement_Under_Appeal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Subsidy Agreement Under Appeal</description>
    <label>Subsidy Agreement Under Appeal</label>
    <type>Checkbox</type>
</CustomField>