force-app/main/default/objects/Permanency_Plan__c/recordTypes/New_Plan_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>New_Plan_Record_Type</fullName>
    <active>true</active>
    <label>New Plan Record Type</label>
</RecordType>