force-app/main/default/objects/Permanency_Plan__c/recordTypes/Permanent_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>Permanent_Record_Type</fullName>
    <active>true</active>
    <label>Permanent Record Type</label>
</RecordType>